Add openApi documentation for UserPreferenceFeed Apis.
